--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
-pandas~=1.2.1
-voila-gridstack
-matplotlib~=3.3.4
-seaborn
-numpy~=1.20.0
+pandas==1.2.1
+voila-gridstack==0.1.0
+matplotlib==3.3.4
+seaborn==0.11.1
+numpy==1.20.0
+ipympl~=0.6.3
+ipywidgets~=7.6.3
